--- a/src/app/components/cart-list/cart-list.component.html
+++ b/src/app/components/cart-list/cart-list.component.html
@@ -1,5 +1,5 @@
 <ion-list>
-  <ion-button expand="block" color="primary" (click)="callAdd()">
+  <ion-button *ngIf="showButtons" expand="block" color="primary" (click)="callAdd()">
     <ion-icon slot="start" name="add-circle-outline"></ion-icon>
     Add new item
   </ion-button>
@@ -13,18 +13,18 @@
     </ion-label>
     <ion-badge slot="end" color="primary">{{menuItem.qty}}</ion-badge>
   </ion-item>
-  <ion-item lines="full" color="light">
+  <ion-item *ngIf="showTotal" lines="full" color="light">
     <ion-icon slot="start" name="cart-outline"></ion-icon>
     <ion-label>
       <h3>Total</h3>
     </ion-label>
     <ion-badge slot="end" color="success">{{cart?.total || 0 | currency:currency}}</ion-badge>
   </ion-item>
-  <ion-button expand="block" color="primary" (click)="callPayment()">
+  <ion-button *ngIf="showButtons" expand="block" color="primary" (click)="callPayment()">
     <ion-icon slot="start" name="card-outline"></ion-icon>
     Payment
   </ion-button>
-  <ion-button expand="block" color="warning" (click)="callClear()">
+  <ion-button *ngIf="showButtons" expand="block" color="warning" (click)="callClear()">
     <ion-icon slot="start" name="trash-outline"></ion-icon>
     Clear cart
   </ion-button>
