--- a/src/app/pages/pay-order/pay-order.page.html
+++ b/src/app/pages/pay-order/pay-order.page.html
@@ -1,4 +1,5 @@
 <app-title [showBackButton]="true" [titleText]="'Payment Info'" [showButtons]="true"></app-title>
 <ion-content>
   <app-card-input [cart]="data.cart" (onPayment)="onPayment($event)"></app-card-input>
+  <app-card-tap (onPayment)="onPayment($event)"></app-card-tap>
 </ion-content>
