--- a/src/app/components/card-tap/card-tap.component.html
+++ b/src/app/components/card-tap/card-tap.component.html
@@ -4,7 +4,7 @@
     Tap Card
   </ion-button>
 </ion-list>
-<ion-modal [isOpen]="data.isOpen">
+<ion-modal [isOpen]="data.isOpen" (willDismiss)="onWillDismiss($event)">
   <ng-template>
     <ion-header>
       <ion-toolbar>
