--- a/src/app/shared/title/title.component.html
+++ b/src/app/shared/title/title.component.html
@@ -1,7 +1,7 @@
 <ion-header *ngIf="showHeader">
   <ion-toolbar color="primary">
     <ion-buttons slot="start" *ngIf="showBackButton">
-      <ion-button [routerLink]="['/tabs']" title="Home">
+      <ion-button (click)="gotoApp()" title="Home">
         <ion-icon slot="icon-only" name="home-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
